# pywebchannel

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README2.md  doc_gen.txt  doc_to_readme.py  publish.py  pyproject.toml  pyproject2.toml  ts_generator.py
docs/: api.rst  conf.py  conf2.py  congratulations.md  credits.md  how_to_contribute.md  index.rst  installation.md  license.md  modules.rst  pywebchannel.code_analyzer.models.rst  pywebchannel.code_analyzer.rst  pywebchannel.code_analyzer.utils.rst  pywebchannel.rst  usage_setup.md  what_is_it.md  why_to_use.md
example/HelloWorldApp/backend/: main.py
example/HelloWorldApp/frontend/: index.html  package-lock.json
example/TodoApp/backend/: main.py
example/TodoApp/frontend/: index.html  package-lock.json  package.json
example/TodoApp/frontend-qwik/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
example/TodoApp/frontend-react/: .eslintrc.cjs  package.json  tsconfig.json
example/TodoApp/frontend-react-with-preact-signals/: .eslintrc.cjs  index.html  package.json  vite.config.ts
examples/HelloWorldApp/backend/: main.py  ts_generator.py
examples/HelloWorldApp/frontend/: index.html  package.json
examples/TodoApp/backend/: main.py
examples/TodoApp/frontend-qwik/: .eslintrc.cjs  package-lock.json  package.json
examples/TodoApp/frontend-react/: package-lock.json
examples/TodoApp/frontend-react-with-preact-signals/: package-lock.json  tsconfig.json
examples/TodoApp/frontend-solid/: index.html  (+2 more)
src/pywebchannel/: CodeAnalyzer.py  Controller.py  ControllerBase.py  GeneratorWatcher.py  HttpServer.py  Utils.py  WebChannelService.py  __init__.py
(+262 files in other folders)
