[build-system]
requires = ["hatchling", "pyside6", "pydantic"]
build-backend = "hatchling.build"

[project]
name = "pywebchannel"
version = "1.2"
authors = [
    { name = "Cihan Uyanik", email = "cihanuyanik34@gmail.com" },
]
description = "This repository generates auto typescript files for QWebChannel python local backend. It enables you to build a stunning UI for your python project with web technologies."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cihanuyanik/pywebchannel"
Issues = "https://github.com/cihanuyanik/pywebchannel/issues"